traefik/api/middleware.yml
apiVersion:  traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ratelimit
spec:
  rateLimit:
    average: 5
    period: 1s
