traefik/api/dashboard-ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik-system
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`dashboard.127.0.0.1.nip.io`)
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
