traefik/api/ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`127.0.0.1`) # && Headers(`UserKey`, `teste`)
    kind: Rule
    services:
    - name: nginx-service
      port: 80
    middlewares:
    - name: ratelimit

# só faz o redirecionamento caso tenha o header UserKey:teste
# Utilize o postman ou o modify header no chrome
